// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardArea should match the snapshot if current View is Photos 1`] = `
<div
  className="CardArea"
>
  <h2>
    My Family 
    Photos
  </h2>
  <div
    className="CardArea--div"
  />
</div>
`;

exports[`CardArea should match the snapshot if current View is Recipes 1`] = `
<div
  className="CardArea"
>
  <h2>
    My Family 
    Recipes
  </h2>
  <div
    className="CardArea--div"
  />
</div>
`;

exports[`CardArea should match the snapshot if current View is Stories 1`] = `
<div
  className="CardArea"
>
  <h2>
    My Family 
    Stories
  </h2>
  <div
    className="CardArea--div"
  />
</div>
`;
